# feed-llm

./: LICENSE  README.md  pyproject.toml
src/feed_llm/: default_ignores.txt  formatter.py  ignore_manager.py  main.py  ui.py
