[project]
name = "feed-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cyclopts>=3.5.1",
    "pyperclip>=1.9.0",
    "textual>=1.0.0",
]

[project.scripts]
feed-llm = "feed_llm.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/feed_llm"]
